# cmake-dependencies-manager

./: .gitignore  CMakeLists.txt  README.md  main.cpp
